- Re-create with new jextract version all java files for better usage - Updated the codebase to reflect resent changes of JDK17