@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.librawfx</groupId>
     <artifactId>LibRawFX</artifactId>
-    <version>1.6</version>
+    <version>1.7-SNAPSHOT</version>
     
     <name>LibRawFX</name>
     <description>This installs the native lib libraw as a JavaFX Image format provider similar to imageIO before on Swing</description>
@@ -46,8 +46,9 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>16</maven.compiler.source>
-        <maven.compiler.target>16</maven.compiler.target>        
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target> 
+        <javafx.version>17.0.0.1</javafx.version>       
     </properties>
     
     
@@ -55,22 +56,22 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>16</version>
+            <version>${javafx.version}</version>
         </dependency>               
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-graphics</artifactId>
-            <version>16</version>
+            <version>${javafx.version}</version>
         </dependency>               
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-media</artifactId>
-            <version>16</version>
+            <version>${javafx.version}</version>
         </dependency>               
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-base</artifactId>
-            <version>16</version>
+            <version>${javafx.version}</version>
         </dependency>               
     </dependencies>
     <build>
@@ -92,7 +93,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <release>16</release>
+                    <release>17</release>
                     <fork>true</fork>
                     <compilerArgs>                        
                         <arg>--add-exports=javafx.graphics/com.sun.javafx.iio=org.librawfx</arg>                                
@@ -100,7 +101,7 @@
                     </compilerArgs>                                        
                 </configuration>
             </plugin>
-            <plugin>
+            <!--<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
                 <version>3.2.1</version>
@@ -125,17 +126,17 @@
                         </goals>
                         <configuration>                            
                             <additionalJOptions>                                
-                                <additionalJOption>--add-exports=javafx.graphics/com.sun.javafx.iio=org.librawfx</additionalJOption>                                
-                                <additionalJOption>--add-exports=javafx.graphics/com.sun.javafx.iio.common=org.librawfx</additionalJOption>
+                                <additionalJOption>-add-exports=javafx.graphics/com.sun.javafx.iio=org.librawfx</additionalJOption>                                
+                                <additionalJOption>-add-exports=javafx.graphics/com.sun.javafx.iio.common=org.librawfx</additionalJOption>
                             </additionalJOptions>
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.5</version>
+                <version>0.0.6</version>
                 <configuration>
                     <mainClass>org.librawfx.TestApp</mainClass>                    
                 </configuration>
@@ -146,7 +147,8 @@
                         <id>default-cli</id>
                         <configuration>
                             <options>                                   
-                                <option>--add-modules jdk.incubator.foreign -Dforeign.restricted=permit</option>                                
+                                <option>--enable-native-access org.librawfx</option>
+                                <option>--add-modules jdk.incubator.foreign</option>                                
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio=org.librawfx</option>                                
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio.common=org.librawfx</option>
                             </options>
@@ -157,8 +159,9 @@
                         <!-- Usage: mvn clean javafx:run@debug -->
                         <id>debug</id>
                         <configuration>
-                            <options>
-                                <option>--add-modules jdk.incubator.foreign -Dforeign.restricted=permit -agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:8000</option>
+                            <options> 
+                                <option>--enable-native-access org.librawfx</option>                               
+                                <option>--add-modules jdk.incubator.foreign -agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:8000</option>
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio=org.librawfx</option>                                
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio.common=org.librawfx</option>
                             </options>
@@ -168,8 +171,9 @@
                         <!-- Configuration for automatic IDE debugging -->
                         <id>ide-debug</id>
                         <configuration>
-                            <options>
-                                <option>--add-modules jdk.incubator.foreign -Dforeign.restricted=permit -agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
+                            <options> 
+                                <option>--enable-native-access org.librawfx</option>                               
+                                <option>--add-modules jdk.incubator.foreign -agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio=org.librawfx</option>                                
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio.common=org.librawfx</option>
                             </options>
@@ -185,7 +189,8 @@
                                 <option>${profiler.jvmargs.arg3}</option>
                                 <option>${profiler.jvmargs.arg4}</option>
                                 <option>${profiler.jvmargs.arg5}</option>
-                                <option>--add-modules jdk.incubator.foreign -Dforeign.restricted=permit</option>
+                                <option>--enable-native-access org.librawfx</option>                               
+                                <option>--add-modules jdk.incubator.foreign</option>
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio=org.librawfx</option>                                
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio.common=org.librawfx</option>
                             </options>
